Bug 818218 - Refactor ExtendendJSONObject parsing. r=rnewman
UltraBlame original commit: e2df102b0fe773bb8b488db696c7be5de94c5692